@@ -49,251 +49,157 @@
 			<top>150</top>
 			<control type="button" id="11">
 				<description>1 button</description>
-				<width>60</width>
-				<height>60</height>
-				<font>font13</font>
-				<align>center</align>
-				<aligny>center</aligny>
-				<texturenofocus border="12">buttons/keyboard-nofocus.png</texturenofocus>
-				<texturefocus border="12">buttons/keyboard-focus.png</texturefocus>
+				<include>KeyboardButtonBig</include>
 				<label>12311</label>
 				<onleft>23</onleft>
 				<onright>12</onright>
 				<onup>20</onup>
 				<ondown>14</ondown>
-				<focusedcolor>black</focusedcolor>
 			</control>
 			<control type="button" id="12">
 				<description>2 button</description>
 				<left>60</left>
-				<width>60</width>
-				<height>60</height>
-				<font>font13</font>
-				<align>center</align>
-				<aligny>center</aligny>
-				<texturenofocus border="12">buttons/keyboard-nofocus.png</texturenofocus>
-				<texturefocus border="12">buttons/keyboard-focus.png</texturefocus>
+				<include>KeyboardButtonBig</include>
 				<label>12312</label>
 				<onleft>11</onleft>
 				<onright>13</onright>
 				<onup>10</onup>
 				<ondown>15</ondown>
-				<focusedcolor>black</focusedcolor>
 			</control>
 			<control type="button" id="13">
 				<description>3 button</description>
 				<left>120</left>
-				<width>60</width>
-				<height>60</height>
-				<font>font13</font>
-				<align>center</align>
-				<aligny>center</aligny>
-				<texturenofocus border="12">buttons/keyboard-nofocus.png</texturenofocus>
-				<texturefocus border="12">buttons/keyboard-focus.png</texturefocus>
+				<include>KeyboardButtonBig</include>
 				<label>12313</label>
 				<onleft>12</onleft>
 				<onright>23</onright>
 				<onup>22</onup>
 				<ondown>16</ondown>
-				<focusedcolor>black</focusedcolor>
 			</control>
 			<control type="button" id="23">
 				<description>Backspace button</description>
 				<left>180</left>
-				<width>60</width>
 				<height>120</height>
 				<textwidth>94</textwidth>
 				<font>font10</font>
-				<align>center</align>
-				<aligny>center</aligny>
-				<texturenofocus border="12">buttons/keyboard-nofocus.png</texturenofocus>
-				<texturefocus border="12">buttons/keyboard-focus.png</texturefocus>
+				<include>KeyboardButtonBig</include>
 				<label>20181</label>
 				<angle>270</angle>
 				<onleft>13</onleft>
 				<onright>11</onright>
 				<onup>21</onup>
 				<ondown>21</ondown>
-				<focusedcolor>black</focusedcolor>
 			</control>
 			<control type="button" id="14">
 				<description>4 button</description>
 				<top>60</top>
-				<width>60</width>
-				<height>60</height>
-				<font>font13</font>
-				<align>center</align>
-				<aligny>center</aligny>
-				<texturenofocus border="12">buttons/keyboard-nofocus.png</texturenofocus>
-				<texturefocus border="12">buttons/keyboard-focus.png</texturefocus>
+				<include>KeyboardButtonBig</include>
 				<label>12314</label>
 				<onleft>23</onleft>
 				<onright>15</onright>
 				<onup>11</onup>
 				<ondown>17</ondown>
-				<focusedcolor>black</focusedcolor>
 			</control>
 			<control type="button" id="15">
 				<description>5 button</description>
 				<left>60</left>
 				<top>60</top>
-				<width>60</width>
-				<height>60</height>
-				<font>font13</font>
-				<align>center</align>
-				<aligny>center</aligny>
-				<texturenofocus border="12">buttons/keyboard-nofocus.png</texturenofocus>
-				<texturefocus border="12">buttons/keyboard-focus.png</texturefocus>
+				<include>KeyboardButtonBig</include>
 				<label>12315</label>
 				<onleft>14</onleft>
 				<onright>16</onright>
 				<onup>12</onup>
 				<ondown>18</ondown>
-				<focusedcolor>black</focusedcolor>
 			</control>
 			<control type="button" id="16">
 				<description>6 button</description>
 				<left>120</left>
 				<top>60</top>
-				<width>60</width>
-				<height>60</height>
-				<font>font13</font>
-				<align>center</align>
-				<aligny>center</aligny>
-				<texturenofocus border="12">buttons/keyboard-nofocus.png</texturenofocus>
-				<texturefocus border="12">buttons/keyboard-focus.png</texturefocus>
+				<include>KeyboardButtonBig</include>
 				<label>12316</label>
 				<onleft>15</onleft>
 				<onright>23</onright>
 				<onup>13</onup>
 				<ondown>19</ondown>
-				<focusedcolor>black</focusedcolor>
 			</control>
 			<control type="button" id="17">
 				<description>7 button</description>
 				<top>120</top>
-				<width>60</width>
-				<height>60</height>
-				<font>font13</font>
-				<align>center</align>
-				<aligny>center</aligny>
-				<texturenofocus border="12">buttons/keyboard-nofocus.png</texturenofocus>
-				<texturefocus border="12">buttons/keyboard-focus.png</texturefocus>
+				<include>KeyboardButtonBig</include>
 				<label>12317</label>
 				<onleft>21</onleft>
 				<onright>18</onright>
 				<onup>14</onup>
 				<ondown>20</ondown>
-				<focusedcolor>black</focusedcolor>
 			</control>
 			<control type="button" id="18">
 				<description>8 button</description>
 				<left>60</left>
 				<top>120</top>
-				<width>60</width>
-				<height>60</height>
-				<font>font13</font>
-				<align>center</align>
-				<aligny>center</aligny>
-				<texturenofocus border="12">buttons/keyboard-nofocus.png</texturenofocus>
-				<texturefocus border="12">buttons/keyboard-focus.png</texturefocus>
+				<include>KeyboardButtonBig</include>
 				<label>12318</label>
 				<onleft>17</onleft>
 				<onright>19</onright>
 				<onup>15</onup>
 				<ondown>10</ondown>
-				<focusedcolor>black</focusedcolor>
 			</control>
 			<control type="button" id="19">
 				<description>9 button</description>
 				<left>120</left>
 				<top>120</top>
-				<width>60</width>
-				<height>60</height>
-				<font>font13</font>
-				<align>center</align>
-				<aligny>center</aligny>
-				<texturenofocus border="12">buttons/keyboard-nofocus.png</texturenofocus>
-				<texturefocus border="12">buttons/keyboard-focus.png</texturefocus>
+				<include>KeyboardButtonBig</include>
 				<label>12319</label>
 				<onleft>18</onleft>
 				<onright>21</onright>
 				<onup>16</onup>
 				<ondown>22</ondown>
-				<focusedcolor>black</focusedcolor>
 			</control>
 			<control type="button" id="21">
 				<description>Done button</description>
 				<left>180</left>
 				<top>120</top>
-				<width>60</width>
 				<height>120</height>
 				<textwidth>94</textwidth>
 				<font>font10</font>
-				<align>center</align>
-				<aligny>center</aligny>
-				<texturenofocus border="12">buttons/keyboard-nofocus.png</texturenofocus>
-				<texturefocus border="12">buttons/keyboard-focus.png</texturefocus>
+				<include>KeyboardButtonBig</include>
 				<label>20177</label>
 				<angle>270</angle>
 				<onleft>19</onleft>
 				<onright>17</onright>
 				<onup>23</onup>
 				<ondown>23</ondown>
-				<focusedcolor>black</focusedcolor>
 			</control>
 			<control type="button" id="20">
 				<description>prev button</description>
 				<top>180</top>
-				<width>60</width>
-				<height>60</height>
-				<font>font13</font>
 				<label>&lt;&lt;</label>
-				<align>center</align>
-				<aligny>center</aligny>
-				<texturenofocus border="12">buttons/keyboard-nofocus.png</texturenofocus>
-				<texturefocus border="12">buttons/keyboard-focus.png</texturefocus>
+				<include>KeyboardButtonBig</include>
 				<onleft>21</onleft>
 				<onright>10</onright>
 				<onup>17</onup>
 				<ondown>11</ondown>
-				<focusedcolor>black</focusedcolor>
 			</control>
 			<control type="button" id="10">
 				<description>0 button</description>
 				<left>60</left>
 				<top>180</top>
-				<width>60</width>
-				<height>60</height>
-				<font>font13</font>
-				<align>center</align>
-				<aligny>center</aligny>
-				<texturenofocus border="12">buttons/keyboard-nofocus.png</texturenofocus>
-				<texturefocus border="12">buttons/keyboard-focus.png</texturefocus>
+				<include>KeyboardButtonBig</include>
 				<label>12310</label>
 				<onleft>20</onleft>
 				<onright>22</onright>
 				<onup>18</onup>
 				<ondown>12</ondown>
-				<focusedcolor>black</focusedcolor>
 			</control>
 			<control type="button" id="22">
 				<description>next button</description>
 				<left>120</left>
 				<top>180</top>
-				<width>60</width>
-				<height>60</height>
-				<font>font13</font>
 				<label>&gt;&gt;</label>
-				<align>center</align>
-				<aligny>center</aligny>
-				<texturenofocus border="12">buttons/keyboard-nofocus.png</texturenofocus>
-				<texturefocus border="12">buttons/keyboard-focus.png</texturefocus>
+				<include>KeyboardButtonBig</include>
 				<onleft>10</onleft>
 				<onright>21</onright>
 				<onup>19</onup>
 				<ondown>13</ondown>
-				<focusedcolor>black</focusedcolor>
 			</control>
 		</control>
 	</controls>
