@@ -1,5 +1,7 @@
 [B]Version 1.3.6[/B]
 - Fix album and song information window play button
+- Fix numeric dialog
+- Switch to bigger keyboard dialog
 
 [B]Version 1.3.5[/B]
 - Recode video calibration window
